RESOLVED FIXED33730
wx port rendering radio buttons incorrectly
https://bugs.webkit.org/show_bug.cgi?id=33730
Summary wx port rendering radio buttons incorrectly
Kevin Watters
Reported 2010-01-15 12:32:24 PST
Created attachment 46699 [details] Don't use manual transforms when using CG The wxMac build is rendering radio buttons incorrectly, because it's using a wrong rectangle in RenderThemeWx.cpp
Attachments
Don't use manual transforms when using CG (1.63 KB, patch)
2010-01-15 12:32 PST, Kevin Watters
kevino: review+
kevino: commit-queue-
Kevin Ollivier
Comment 1 2010-01-17 15:40:06 PST
Landed in r53373, thanks!
Note You need to log in before you can comment on or make changes to this bug.