Reviewed by Kevin Ollivier.

[wx] On Win and GTK, we need to manually apply the transforms when falling back
to GDI / GDK drawing, but this is not needed on Mac since we always use CG there.

https://bugs.webkit.org/show_bug.cgi?id=33730


Canonical link: https://commits.webkit.org/44777@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53373 268f45cc-cd09-0410-ab3c-d52691b4dbfc